test/pure/negative/impure4.mli.expected

*******************************
********** Parsed file ********
*******************************
val f : int -> int[@@gospel {| y = f x
    pure
    checks x > 0 |}]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Gospelstdlib *)

val f : int -> int
(*@ y = f x
     *)
File "impure4.mli", line 2, characters 5-6:
Error: Type checking error: a pure function cannot raise exceptions
